Fix scroll hidden behind breadcrumbs component

--- a/packages/commonwealth/client/scripts/views/components/Breadcrumbs/Breadcrumbs.scss
+++ b/packages/commonwealth/client/scripts/views/components/Breadcrumbs/Breadcrumbs.scss
@@ -13,6 +13,7 @@
     z-index: 3;
     overflow: auto;
     width: 100%;
+    max-width: 500px;
     max-height: 52px !important;
     min-height: 52px !important;
 
@@ -29,6 +30,7 @@
 
   .BreadcrumbsBlockContentArea {
     width: 100%;
+    max-width: 500px;
     max-height: 52px !important;
     min-height: 52px !important;
     @include extraSmall {
